--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,9 @@ dependencies:
   syncfusion_flutter_charts: ^22.2.12
   syncfusion_flutter_gauges: ^22.2.12
   liquid_progress_indicator_v2: ^0.5.0
-  fl_chart: ^0.65.0
   cached_network_image: ^3.3.1
+  flutter_local_notifications: ^17.2.1+2
+  flutter_launcher_icons: "^0.13.1"
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/nutrify.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,12 +73,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/ahri_coven.gif
-    - images/ahri_ori.gif
     - images/ahri_icon.jpg
     - images/nature.gif
     - images/arga.jpg
-    - images/hidroponik.png
+    - images/nutrify.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
